Add 2-1-2-1-buy-request.html page
and little changed in devjy.js file.

--- a/dev/webtemplete/assets/css/devjy.css
+++ b/dev/webtemplete/assets/css/devjy.css
@@ -3,10 +3,14 @@
 }
 
 .featured-item {
-    min-width: 300px;
-    min-height: 300px;
+    min-width: 200px;
+    min-height: 350px;
 }
 
 .section-heading h6 {
     text-align: right;
+}
+
+#map img {
+    width: 100%;
 }
