--- a/dev/webtemplete/assets/css/tooplate-main.css
+++ b/dev/webtemplete/assets/css/tooplate-main.css
@@ -57,47 +57,7 @@ a {
 }
 /* search box style*/
 
-.search {
-  width: 100%;
-  position: relative;
-  display: flex;
-}
-
-.searchTerm {
-  width: 250px;
-  
-  border: 3px solid #00B4CC;
-  border-right: none;
-  padding: 5px;
-  height: 36px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #9DBFAF;
-}
-
-.searchTerm:focus{
-  color: #00B4CC;
-}
-
-.searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
-}
-
 /*Resize the wrap to see the search bar change!*/
-.wrap{
-  width: 30%;
-  position: absolute;
-  
-   transform: translate(5%, 50%); 
-}
 
 
 /* Pre Header Style */
@@ -427,7 +387,7 @@ a {
 	box-shadow: none!important;
 }
 #filters .btn-primary {
-	margin-left:-5px;
+	margin-left:0px;
 	color: #1e1e1e;
 	border: none;
 	width: 100px;
@@ -436,6 +396,7 @@ a {
 	background-color: transparent;
 	position: relative;
 	transform: translate(300%,0);
+	margin-right: 5px;
 }
 /* Isotope Transitions
 ------------------------------- */
