--- a/dev/app/src/assets/css/tooplate-main.css
+++ b/dev/app/src/assets/css/tooplate-main.css
@@ -401,7 +401,7 @@ a {
 	font-weight: 700;
 	background-color: transparent;
 	position: relative;
-	transform: translate(780%,-20%);
+	/* transform: translate(780%,-20%); */
 	margin-right: 5px;
 }
 /* Isotope Transitions
