--- a/dev/app/src/assets/css/devjy.css
+++ b/dev/app/src/assets/css/devjy.css
@@ -16,6 +16,10 @@
     width: 100%;
 }
 
+#product-list {
+    height: fit-content !important;
+}
+
 #selling-list {
     height: fit-content !important;
 }
