update query not working but else is good

--- a/dev/app/src/assets/css/devjy.css
+++ b/dev/app/src/assets/css/devjy.css
@@ -19,6 +19,10 @@
 #product-list {
     height: fit-content !important;
 }
+#purchased-list {
+    height: fit-content !important;
+}
+
 
 #selling-list {
     height: fit-content !important;
